Archive2/1a/5bac0aed1b62bc/output
main.cpp: In function 'void f(int, const double*)':
main.cpp:6:6: error: increment of read-only parameter 'a'
     a++; // This should not compile
      ^
